[package]
name = "lgtv_manager"
version = "0.1.0"
edition = "2021"
description = "Asynchronous control manager for LG TVs"
licence = "MIT OR Apache-2.0"
repository = "https://github.com/mjoblin/lgtv_manager"
homepage = "https://github.com/mjoblin/lgtv_manager"
readme = "README.md"
keywords = ["lg", "lgtv", "ssap", "webos"]
authors = ["Mike Joblin"]

[dependencies]
directories = "5.0.1"
futures = "0.3.30"
futures-util = "0.3.30"
futures-channel = "0.3.30"
log = "0.4.22"
native-tls = "0.2.12"
pin-utils = "0.1.0"
rupnp = { version = "2.0.0", features = ["full_device_spec"] }
rust-fsm = "0.7.0"
rust-fsm-dsl = "0.7.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tokio-util = { version = "0.7.11", features = ["rt"] }
tungstenite = "0.21.0"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11.5"
tokio = { version = "1.39.3", features = ["full"] }
